fixing z-index main nav

--- a/sites/all/themes/drupalrocks/css/custom/jon-custom.css
+++ b/sites/all/themes/drupalrocks/css/custom/jon-custom.css
@@ -160,6 +160,7 @@ header .socialandsearch input.form-submit {
 	padding: 0 20px; 
 	margin: 0;
 	position: relative;
+	z-index: 5000;
 }
 #main #navigation nav ul li:first-child {
 	margin: 0;
